--- a/public/style/style.css
+++ b/public/style/style.css
@@ -10,9 +10,24 @@ header{
     width: 100%;
     height: 8vh;
     display: flex;
+
     align-items: center;
-    padding-left: 2%;
+    padding-left: 4%;
     background-color: rgb(255, 244, 224);
+}
+.solicitud{
+   margin-left: 29vw;
+   color: rgb(209, 138, 5);
+   font-weight: bold;
+   font-size: 20px;
+
+}
+.login{
+   margin-left: 43vw;
+   color: rgb(209, 138, 5);
+   font-weight: bold;
+   font-size: 20px;
+
 }
 
 .logoMaleteo{
@@ -107,20 +122,13 @@ text-align: center;
     margin-bottom: 3vh;
     font-size: 20px;
 
-
-    /*
-    display:inline-block;
-    width:48px;
-    height:48px;
-    background: -webkit-gradient(linear, left top, left bottom,to rgb(248, 204, 121),from rgb(224, 146, 2));
-
-    */
 }
 .paso-titulo {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 10%;
 }
+
 
 .titulo-medio{
     font-weight: bold;
@@ -187,7 +195,7 @@ button:hover{
 
 }
 
-a{
+.link{
     text-decoration: underline;
     color: orange;
     font-weight: bold;
@@ -197,7 +205,6 @@ label{
     margin-bottom: 1%;
     font-size: 18px;
 }
-
 
 
 .opiniones-titulo{
@@ -219,6 +226,7 @@ label{
     
 }
 
+
 .guardian{
     width: 30vw;
     border: solid lightgrey;
@@ -239,8 +247,8 @@ label{
 .cara{
     width: 80px;
     height: auto;
-    border-radius: 18%;
-    margin-top: -20%;   
+    border-radius: 50%;
+    margin-top: -30%;   
 }
 
 footer{
@@ -252,6 +260,8 @@ footer{
     text-align: center;
     justify-content: center;
     font-size: 14px;
+
+      
 }
 
 /* MEDIA QUERIES */
