--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Maleteo!{% endblock %}</title>
+        <title>{% block title %}Maleteo{% endblock %}</title>
         {% block stylesheets %}
         <link rel="stylesheet" href="style/style.css">
         {% endblock %}
@@ -14,6 +14,19 @@
         <picture>
             <a href="/maleteo"><img src="assets/img/logo.svg" alt="logoMaleteo" class="logoMaleteo"></a>
         </picture>
+<div class="solicitud">
+        {% if is_granted('ROLE_ADMIN') %}
+        
+            <a href="/solicitudes" class="linkSolicitud">Solicitudes</a>
+        
+        {% endif %}
+</div>
+        {% if is_granted('ROLE_USER') %}
+            <a href="/logout" class="login" >Salir</a>
+        {% else %}
+            <a href="/login" class="login" >Identificarse</a>
+        {% endif %}
+
     </header>
     {% endblock %}
 
@@ -71,7 +84,7 @@
         {{form(form_leads)}}
          
             <div class="campo-formulario">
-   <p class="privacidad">Al enviar acepta nuestra <a href="">politica de privacidad</a></p>
+   <p class="privacidad">Al enviar acepta nuestra <a href="" class="link">politica de privacidad</a></p>
 
         </form> 
     </article>
@@ -88,7 +101,7 @@
 
                 <div class="fotoGuardian">
                     <picture>
-                        <img src="assets/img/guardian1" alt="" class="cara">
+                        <img src="assets/img/user.png" alt="" class="cara">
                     </picture>
                 </div>
                
