--- a/public/style/solicitudes.css
+++ b/public/style/solicitudes.css
@@ -3,10 +3,6 @@
     text-align: center;
 
 }
-.lista{
-    display: flex;
-    flex-direction: column-reverse;
-}
 
 li{
     margin: 1vh 0;
@@ -23,6 +19,37 @@ footer{
 .login{
     margin-left: 50vw;
 }
-table{
 
+table{
+    width: 100%;
+    border: solid orange;
+    border-collapse: collapse;
+}
+ thead{
+     background-color: orange;
+     border-bottom: solid 5px rgb(199, 129, 0);
+ }
+.borrar{
+    height: 25px;
+    width: auto;
+}
+ th,td{
+     padding: 20px;
+ }
+
+ tr:nth-child(even){
+     background-color: #dddddd;
+ }
+
+ tr:hover{
+     background-color: rgb(255, 233, 194);
+ }
+
+.tabla{
+margin-top: 10vh;
+display: flex;
+justify-content: center;
+align-items: center;
+width: 50vw;
+margin-left: 27%;
 }
