--- a/public/style/style.css
+++ b/public/style/style.css
@@ -10,26 +10,30 @@ header{
     width: 100%;
     height: 8vh;
     display: flex;
-
+    justify-content: space-between;
     align-items: center;
-    padding-left: 4%;
+    padding: 2%;
+    
     background-color: rgb(255, 244, 224);
 }
-.solicitud{
-   margin-left: 29vw;
-   color: rgb(209, 138, 5);
-   font-weight: bold;
-   font-size: 20px;
 
+ul{
+    display: inline;
 }
-.login{
-   margin-left: 43vw;
-   color: rgb(209, 138, 5);
-   font-weight: bold;
-   font-size: 20px;
-
+li{
+    display: inline;
+    margin-left: 5vh;
+    color: black;
+    font-weight: bold;
 }
 
+.registrarse{
+    color: white;
+    background: orange;
+    border: solid 10px;
+    border-color: orange;
+    border-radius: 5%  ;
+}
 .logoMaleteo{
     width: 70%;
     height: auto;
